--- a/css/index-header.css
+++ b/css/index-header.css
@@ -3,7 +3,7 @@
     padding: 30px 15px 30px 15px;
     background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(../img/background-header.png);
     background-size: cover;
-    /*padding-left: 213px;
+   /*padding-left: 213px;
     padding-right: 213px;*/
     opacity: 0.85;
     margin: auto;
@@ -17,16 +17,26 @@
 
 }
 
+.nav__link {
+    position: relative;
+    transition: .5s;
+}
 
-/*.nav__menu::before {
-    content: "";
+.nav__link:before {
+    content: '';
     position: absolute;
-    top: 0;
+    width: 0;
+    height: 2px;
     left: 0;
-    width: 100%;
-    height: 100%;
+    bottom: 0;
+   /* transform: scale(0);*/
+    transition: .3s;
+    background-color: var(--light-text-color);
+}
 
-}*/
+.nav__link:hover:before {
+    width: 100%;
+}
 
 h1 {
     color: var(--light-text-color);
@@ -93,18 +103,15 @@ h1 {
 }
 
 .svg-icon:hover {
-    fill: #c46d17;
+    fill: #d3904c;
 
 }
-
-
 
 
 .header__list__social {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 5px;
-
     justify-items: baseline;
 
 }
@@ -122,10 +129,9 @@ h1 {
 
 .nav__link__main__menu:hover {
     color: var(--light-text-color);
-    border-bottom: 2px solid currentColor;
+    /*border-bottom: 2px solid currentColor;*/
     transition: 0.3ms;
     text-decoration: none;
-    cursor: pointer;
 }
 
 .nav__link__main__menu a {
@@ -157,13 +163,17 @@ h1 {
     color: var(--light-text-color);
 }
 
-nav .openedMenu {
-    margin: 20px;
+.nav__menu .openedMenu {
+    position: relative;
+    left: 250px;
+    top: -15px;
+    /*border-bottom: 20px;*/
+    /*margin: 20px;*/
     cursor: pointer;
     display: none;
 }
 
-.nav__wrapper .nav__pages .closedMenu {
+.closedMenu {
     display: none;
     cursor: pointer;
 }
@@ -186,11 +196,21 @@ nav .openedMenu {
         justify-content: start;
     }
 
-    .nav__social {
+    .header__list__social {
         position: relative;
         display: flex;
         flex-direction: row;
-        top: 0;
+       /* top: 0;*/
+
+    }
+
+    .closedMenu {
+        display: none;
+        /*position: relative;
+        top: -60px;
+        right: 40px;*/
+        margin-top: 20px;
+        margin-right: 100px;
 
     }
 
@@ -211,19 +231,20 @@ nav .openedMenu {
         background: var(--color-gray);
         transition: top 1s ease;
         display: none;
-        padding-top: 5px;
+        padding-top: 100px;
+        gap: unset;
     }
 
     .nav__link__main__menu {
-        margin: auto;
+        
         font-size: 0.8rem;
         margin-bottom: 10px;
         text-align: center;
     }
 
-    li.nav__link__main__menu a {
+    /*li.nav__link__main__menu a {
         align-items: center;
-    }
+    }*/
 
     .nav__link__main__menu:hover {
 
@@ -235,18 +256,18 @@ nav .openedMenu {
         z-index: 20;
     }
 
-    nav .nav__links__main__menu .closedMenu {
+    /*.closedMenu {
         display: block;
         position: absolute;
-        top: 20px;
-        right: 20px;
-    }
+        top: 40px;
+        right: 40px;
+    }*/
 
     .nav__menu .openedMenu {
         display: block;
     }
 
-    .nav__social .header__list__social li a {
+    .header__list__social li {
         display: inline-block;
         padding: 15px;
         text-decoration: none;
@@ -259,7 +280,7 @@ nav .openedMenu {
         cursor: pointer;
     }
 
-    .nav__links__main__menu .closeMenu,
+   .nav__links__main__menu .closeMenu,
     .nav__social .header__list__social li a {
         display: none;
         cursor: pointer;
@@ -276,7 +297,302 @@ nav .openedMenu {
         display: block;
     }
 
+    .nav__social li a {
+        display: inline-block;
+        padding: 12px;
+    }
+
+}
+
+    
+.header__container {
+    display: grid;
+    justify-items: center;
+    margin: auto;
+
+}
+
+.nav__link {
+    position: relative;
+    transition: .5s;
+}
+
+.nav__link:before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    left: 0;
+    bottom: 0;
+   /* transform: scale(0);*/
+    transition: .3s;
+    background-color: var(--light-text-color);
+}
+
+.nav__link:hover:before {
+    width: 100%;
+}
+
+h1 {
+    color: var(--light-text-color);
+    font-family: 'Bebas neue';
+    font-size: 115px;
+    font-weight: 400;
+}
+
+.under__header {
+    font-family: 'roboto', serif;
+    font-size: 17px;
+    color: var(--light-text-color);
+    text-align: center;
+}
+
+.img__logo {
+    width: 188px;
+}
+
+.nav__links__main__menu,
+.header__list__social {
+    list-style: none;
+}
+
+.nav__menu {
+    display: grid;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+    justify-items: start;
+
+}
+
+.emptyOne {
+    width: 130px;
+}
+
+.emptyTwo {
+    width: 100px;
+}
+
+.nav__links__main__menu {
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    padding: 15px;
+    color: var(--light-text-color);
+    grid-gap: 30px;
+    padding-top: 0;
+    grid-auto-rows: auto;
+}
+
+.nav__link__main__menu {
+    text-decoration: none;
+    color: var(--light-text-color);
+    font-family: 'roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+
+}
+
+.svg-icon {
+    fill: var(--text-color);
+    margin-left: 7.5px;
+}
+
+.svg-icon:hover {
+    fill: #d3904c;
+
+}
+
+
+.header__list__social {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 5px;
+    justify-items: baseline;
+
+}
+
+.nav__menu {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+
+}
+
+.nav__links__main__menu {
+    color: var(--light-text-color);
+}
+
+.nav__link__main__menu:hover {
+    color: var(--light-text-color);
+    /*border-bottom: 2px solid currentColor;*/
+    transition: 0.3ms;
+    text-decoration: none;
+}
+
+.nav__link__main__menu a {
+    text-decoration: none;
+    color: var(--light-text-color);
+}
+
+.under__header-coffee-lab {
+    color: var(--text-color);
+    font-family: 'Satisfy';
+    font-size: 24px;
+}
+
+.under__header-hr {
+    background: var(--text-color);
+    height: 3px;
+    width: 47px;
+    border: none;
+    margin-bottom: 15px;
+}
+
+.under__header-coffee-lab {
+    color: #c7a17a;
+    font-family: 'Satisfy';
+    font-size: 24px;
+}
+
+.openedMenu {
+    color: var(--light-text-color);
+}
+
+.nav__menu .openedMenu {
+    position: relative;
+    left: 250px;
+    top: -15px;
+    /*border-bottom: 20px;*/
+    /*margin: 20px;*/
+    cursor: pointer;
+    display: none;
+}
+
+.closedMenu {
+    display: none;
+    cursor: pointer;
+}
+
+@media (max-width: 1300px) {
+
+    .emptyOne,
+    .emptyTwo {
+        display: none;
+    }
+
+    .nav__menu {
+        flex-wrap: wrap;
+    }
+
+}
+
+@media (max-width: 990px) {
+    .nav__links__main__menu {
+        justify-content: start;
+    }
+
+    .header__list__social {
+        position: relative;
+        display: flex;
+        flex-direction: row;
+       /* top: 0;*/
+
+    }
+
+    .closedMenu {
+        display: none;
+        /*position: relative;
+        top: -60px;
+        right: 40px;*/
+        margin-top: 20px;
+        margin-right: 100px;
+
+    }
+
+}
+
+@media (max-width: 768px) {
+
+    nav .nav__links__main__menu {
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 10;
+        flex-direction: column;
+
+        align-items: center;
+        background: var(--color-gray);
+        transition: top 1s ease;
+        display: none;
+        padding-top: 100px;
+        gap: unset;
+    }
+
+    .nav__link__main__menu {
+        
+        font-size: 0.8rem;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+    /*li.nav__link__main__menu a {
+        align-items: center;
+    }*/
+
+    .nav__link__main__menu:hover {
+
+        border-bottom: none;
+    }
+
+    .img__logo {
+        position: fixed;
+        z-index: 20;
+    }
+
+    /*.closedMenu {
+        display: block;
+        position: absolute;
+        top: 40px;
+        right: 40px;
+    }*/
+
+    .nav__menu .openedMenu {
+        display: block;
+    }
+
     .header__list__social li {
+        display: inline-block;
+        padding: 15px;
+        text-decoration: none;
+        transition: 0.2s ease;
+    }
+
+    nav .openedMenu {
+        margin: 20px;
+        display: none;
+        cursor: pointer;
+    }
+
+   .nav__links__main__menu .closeMenu,
+    .nav__social .header__list__social li a {
+        display: none;
+        cursor: pointer;
+    }
+
+    .nav__links__main__menu .closedMenu {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    nav .openedMenu {
+        display: block;
+    }
+
+    .nav__social li a {
         display: inline-block;
         padding: 12px;
     }
